--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <title> Webpage Title appears under dropdowns but above banner </title> -->
+    <title> Tab Name? </title> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/css/tabler.min.css" />
 
   <!-- tabs with dropdowns -->
@@ -44,10 +44,12 @@
   
   
   </head>
+  <!--
   <body>
     <h1> Insert Header Here </h1>
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js"></script>
-  </body>
+  </body> -->
+  
 </html>
 
 
