--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title> Tab Name? </title> 
+    <title>NoahMadeThis</title> <!-- this is what shows up on the tab
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/css/tabler.min.css" />
 
   <!-- tabs with dropdowns -->
@@ -44,7 +44,7 @@
   
   
   </head>
-  <!--
+  <!-- yeah this is inserted between the tabs and the banner 
   <body>
     <h1> Insert Header Here </h1>
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js"></script>
@@ -64,7 +64,7 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
-      <span class="navbar-toggler-icon"></span>
+      <!-- <span class="navbar-toggler-icon"></span> tabler icon-->
     </button>
     <div class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
       <a href="javascript:void(0)">
