--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <body>
     <h1>Hello, Tabler!</h1>
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js"></script>
-  </body>
-</html>
 
+<!--  section break -->
 <ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="#">Active</a>
@@ -40,6 +39,8 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
+<!--  section break -->
+    
 
-
-
+  </body>
+</html>
