--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               style="background-image: url(...)"
             ></span>
             <div class="d-none d-xl-block ps-2">
-              <div>Paweł Kuna</div>
+              <div>noahmadethis</div>
               <div class="mt-1 small text-secondary">UI Designer</div>
             </div>
           </a>
