--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><a class="dropdown-item" href="#">Something else here 1</a></li>
       <li><hr class="dropdown-divider" /></li>
       <li><a class="dropdown-item" href="#">Separated link</a></li>
     </ul>
