--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
-      <li><a class="dropdown-item" href="#">Something else here 1</a></li>
+      <li><a class="dropdown-item" href="/tiffnanie/tiffnanie">Something else here</a></li>
+      <li><a class="dropdown-item" href="https://www.noahmadethis.website/skills-github-pages/">Something else here 1</a></li>
       <li><hr class="dropdown-divider" /></li>
       <li><a class="dropdown-item" href="#">Separated link</a></li>
     </ul>
