--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     >
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="/tiffnanie/tiffnanie">Something else here</a></li>
-      <li><a class="dropdown-item" href="https://www.noahmadethis.website/skills-github-pages/">Something else here 1</a></li>
+      <li><a class="dropdown-item" href="/engineering/webDevelopment">Web Dev Links</a></li>
+      <li><a class="dropdown-item" href="/tiffnanie/tiffnanie">Look at Her</a></li>
+      <li><a class="dropdown-item" href="https://www.noahmadethis.website/skills-github-pages/">Love notes</a></li>
       <li><hr class="dropdown-divider" /></li>
-      <li><a class="dropdown-item" href="#">Separated link</a></li>
+      <li><a class="dropdown-item" href="/calculator">Calculator</a></li>
     </ul>
   </li>
   <li class="nav-item">
