--- a/links.html
+++ b/links.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    <h1>follow my socials smile</h1>
+    <h1>follow my socials ☺</h1>
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js"></script>
 
 <!--  section break -->
