--- a/links.html
+++ b/links.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<!-- installs -->
+npm install --save @tabler/core
+npm install @tabler/icons --save
+
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -113,6 +118,13 @@
 
 </div>
 <!--  section break -->
+
+    
+<div class="card">
+  <div class="card-body">
+    <p>This is some text within a card body.</p>
+  </div>
+</div>
 
 
 <!--  section break -->    
