--- a/links.html
+++ b/links.html
@@ -116,6 +116,11 @@ npm install @tabler/icons --save
           <div class="card">
             <div class="card-body">
               <p>This is some text within a card body.</p>
+              <p>
+                <a href="#" class="pe-none" tabindex="-1" aria-disabled="true">This link</a> can not be clicked.
+              </p>
+              <p><a href="#" class="pe-auto">This link</a> can be clicked (this is default behavior).</p>
+              
             </div>
           </div>
 
