--- a/links.html
+++ b/links.html
@@ -119,7 +119,7 @@ npm install @tabler/icons --save
               <p>
                 <a href="#" class="pe-none" tabindex="-1" aria-disabled="true">This link</a> can not be clicked.
               </p>
-              <p><a href="#" class="pe-auto">This link</a> can be clicked (this is default behavior).</p>
+              <p><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">This link</a> can be clicked (this is default behavior). Human Benchmark</p>
               
             </div>
           </div>
