--- a/links.html
+++ b/links.html
@@ -113,13 +113,11 @@ npm install @tabler/icons --save
             </div>
           </div>
 
-          <div class="card">
-            <div class="card-body">
+          <div class="col-4">
+            <div class="card-body" style="height: 10rem">
               <p>This is some text within a card body.</p>
-              <p>
-                <a href="#" class="pe-none" tabindex="-1" aria-disabled="true">This link</a> can not be clicked.
-              </p>
-              <p><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">This link</a> can be clicked (this is default behavior). Human Benchmark</p>
+
+              <p><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a>  </p>
               
             </div>
           </div>
