--- a/links.html
+++ b/links.html
@@ -114,7 +114,7 @@ npm install @tabler/icons --save
           </div>
 
           <div class="col-4">
-            <div class="card-body" style="height: 10rem">
+            <div class="cardy" style="height: 10rem">
               <p>This is some text within a card body.</p>
 
               <p><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a>  </p>
