--- a/links.html
+++ b/links.html
@@ -21,7 +21,7 @@ npm install @tabler/icons --save
 <!--  section break -->
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
+    <a class="nav-link active" aria-current="page" href="/tabler">Home</a>
   </li>
   <li class="nav-item dropdown">
     <a
@@ -30,10 +30,11 @@ npm install @tabler/icons --save
       href="#"
       role="button"
       aria-expanded="false"
-      >Dropdown</a
+      >Page Links</a
     >
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Press for fun</a></li>
+      <li><hr class="dropdown-divider" /></li>
       <li><a class="dropdown-item" href="/engineering/webDevelopment">Web Dev Links</a></li>
       <li><a class="dropdown-item" href="/tiffnanie/tiffnanie">Look at Her</a></li>
       <li><a class="dropdown-item" href="https://www.noahmadethis.website/skills-github-pages/">Love notes</a></li>
@@ -42,10 +43,10 @@ npm install @tabler/icons --save
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/tabler/links.html">Links</a>
+    <a class="nav-link" href="/tabler/links.html">My Links</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+    <a class="nav-link disabled" aria-disabled="true">Disabled (cannot click no matter how hard you try)</a>
   </li>
 </ul>
 <!--  section break -->
