--- a/links.html
+++ b/links.html
@@ -113,7 +113,7 @@ npm install @tabler/icons --save
               <div class="card-body" style="height: 10rem"></div>
             </div>
           </div>
-
+<!--
           <div class="col-4">
             <div class="mx-auto">
               <p>This is some text within a card body.</p>
@@ -122,10 +122,10 @@ npm install @tabler/icons --save
               
             </div>
           </div>
-
+-->
           <div class="card">
             <div class="card-body">
-              <h3 class="card-title">Card title</h3>
+              <h3 class="card-title">My Links</h3>
               <p class="text-secondary">This is some text within a card body.</p>
             </div>
           </div>
@@ -134,7 +134,7 @@ npm install @tabler/icons --save
               <h3 class="card-title">Card title</h3>
             </div>
             <div class="card-body">
-              <p class="text-secondary">This is some text within a card body.</p>
+              <p class="text-secondary"><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a></p>
             </div>
           </div>
 
