--- a/links.html
+++ b/links.html
@@ -89,7 +89,7 @@ npm install @tabler/icons --save
     <div class="page-body">
       <div class="container-xl">
         <div class="row row-deck row-cards">
-          
+<!-- cards with no info in them          
           <div class="col-4">
             <div class="card">
               <div class="card-body" style="height: 10rem"></div>
@@ -113,6 +113,7 @@ npm install @tabler/icons --save
               <div class="card-body" style="height: 10rem"></div>
             </div>
           </div>
+-->
 <!--
           <div class="col-4">
             <div class="mx-auto">
@@ -123,15 +124,17 @@ npm install @tabler/icons --save
             </div>
           </div>
 -->
+<!-- card with title but no horizontal line          
           <div class="card">
             <div class="card-body">
-              <h3 class="card-title">My Links</h3>
+              <h3 class="card-title">Card title</h3>
               <p class="text-secondary">This is some text within a card body.</p>
             </div>
           </div>
+-->          
           <div class="card">
             <div class="card-header">
-              <h3 class="card-title">Card title</h3>
+              <h3 class="card-title">My Links</h3>
             </div>
             <div class="card-body">
               <p class="text-secondary"><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a></p>
