--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!-- Photo -->
             <div
               class="img-responsive img-responsive-21x9 card-img-top"
-              style="background-image: url(...)"
+              style="background-image: url(/docs/assets/images/75166322068__F1FED4CA-CD5F-4866-972D-170E67395B0E.JPEG)"
             ></div>
             <div class="card-body">
               <h3 class="card-title">Card with title and image</h3>
