--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
               style="background-image: url(/docs/assets/images/75166322068__F1FED4CA-CD5F-4866-972D-170E67395B0E.JPEG)"
             ></div>
             <div class="card-body">
-              <h3 class="card-title">Card with title and image</h3>
+              <h3 class="card-title">Do you see her?</h3>
               <p class="text-secondary">
+                She is everything.
+                
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam deleniti fugit incidunt,
                 iste, itaque minima neque pariatur perferendis sed suscipit velit vitae voluptatem.
               </p>
