--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               style="background-image: url(/docs/assets/images/75166322068__F1FED4CA-CD5F-4866-972D-170E67395B0E.JPEG)"
             ></div>
             <div class="card-body">
-              <h3 class="card-title">Do you see her?</h3>
+              <h3 class="card-title"><a href="/tiffnanie/tiffnanie" class="pe-auto">Do you see her?</a></h3>
               <p class="text-secondary">
                 She is everything.
                 
