--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
             <div class="card-body">
               <h3 class="card-title"><a href="/tiffnanie/tiffnanie" class="pe-auto">Do you see her?</a></h3>
               <p class="text-secondary">
-                She is everything.
-                
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam deleniti fugit incidunt,
-                iste, itaque minima neque pariatur perferendis sed suscipit velit vitae voluptatem.
+                She is everything. Go admire Her.
               </p>
             </div>
           </div>
