--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
       <li class="nav-item">
         <a class="nav-link" href="/tabler/links.html">Links</a>
       </li>
+
+<!-- i dont need a disabled tab right now      
       <li class="nav-item">
         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
       </li>
+-->
+      
     </ul>
 <!-- end tabs -->
     
