--- a/links.html
+++ b/links.html
@@ -45,9 +45,13 @@ npm install @tabler/icons --save
   <li class="nav-item">
     <a class="nav-link" href="/tabler/links.html">My Links</a>
   </li>
+  
+<!-- i dont need a disabled tab right now 
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled (cannot click no matter how hard you try)</a>
   </li>
+-->
+  
 </ul>
 <!--  section break -->
     
