--- a/links.html
+++ b/links.html
@@ -15,7 +15,9 @@ npm install @tabler/icons --save
   </head>
   
   <body>
+<!-- I dont really like this here tbh esp on mobile    
     <h1>follow my socials ☺</h1>
+--> 
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js"></script>
 
 <!--  section break -->
