--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- this is the tabs at the top of the page -->
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
       </li>
       <li class="nav-item dropdown">
         <a
