--- a/links.html
+++ b/links.html
@@ -153,7 +153,7 @@ npm install @tabler/icons --save
             </div>
             <div class="card-body">
               <p class="text-secondary"><a href="https://open.spotify.com/user/jewle30y7mtfcll7eilheq6fl?si=cebbd20d71194b77" class="pe-auto">Spotify</a></p>
-              <p class="text-secondary"><a href="https://www.discogs.com/user/structurallyunsound" class="pe-auto">Discogs</a></p>
+              <p class="text-secondary"><a href="https://www.discogs.com/user/structurallyunsound/collection?header=1" class="pe-auto">Discogs</a></p>
               
               <p class="text-secondary"><a href="https://stats.fm/paulstephenrudd" class="pe-auto">stats.fm</a></p>
               <p class="text-secondary"><a href="https://www.last.fm/user/anticoagulation" class="pe-auto">last.fm</a></p>
