--- a/links.html
+++ b/links.html
@@ -159,7 +159,15 @@ npm install @tabler/icons --save
               <p class="text-secondary"><a href="https://www.last.fm/user/anticoagulation" class="pe-auto">last.fm</a></p>
             </div>
           </div>
-
+          
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">My Links</h3>
+            </div>
+            <div class="card-body">
+              <p class="text-secondary"><a href="https://boxd.it/6NFHD" class="pe-auto">Letterboxd</a></p>
+            </div>
+          </div>
           
         </div>  
       </div>
