--- a/links.html
+++ b/links.html
@@ -67,7 +67,7 @@ npm install @tabler/icons --save
             src="https://preview.tabler.io/static/logo.svg"
             width="110"
             height="32"
-            alt="Tabler"
+            alt="Tabler yes"
             class="navbar-brand-image"
           />
         </a>
