--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
           href="#"
           role="button"
           aria-expanded="false"
-          >Dropdown</a
+          >Page Links</a
         >
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="">Press for Fun</a></li>
+          <li><hr class="dropdown-divider" /></li>
           <li><a class="dropdown-item" href="/engineering/webDevelopment">Web Dev Links</a></li>
           <li><a class="dropdown-item" href="/tiffnanie/tiffnanie">Look at Her</a></li>
           <li><a class="dropdown-item" href="https://www.noahmadethis.website/skills-github-pages/">Love notes</a></li>
@@ -40,7 +41,7 @@
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tabler/links.html">Links</a>
+        <a class="nav-link" href="/tabler/links.html">My Links</a>
       </li>
 
 <!-- i dont need a disabled tab right now      
