--- a/links.html
+++ b/links.html
@@ -64,10 +64,10 @@ npm install @tabler/icons --save
       <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
         <a href="#">
           <img
-            src="https://preview.tabler.io/static/logo.svg"
+            src="/docs/assets/images/75166322068__F1FED4CA-CD5F-4866-972D-170E67395B0E.JPEG"
             width="110"
             height="32"
-            alt="Tabler yes"
+            alt="Tabler"
             class="navbar-brand-image"
           />
         </a>
