--- a/links.html
+++ b/links.html
@@ -167,7 +167,9 @@ npm install @tabler/icons --save
             </div>
             <div class="card-body">
               <p class="text-secondary"><a href="https://boxd.it/6NFHD" class="pe-auto">Letterboxd</a></p>
-            
+
+              <img src="https://unpkg.com/@tabler/icons-png@3.31.0/icons/outline/home.png" />
+
                 <a href="">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
