--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
             <a href="#">
               <img
-                src="https://preview.tabler.io/static/logo.svg"
+                src="/docs/assets/images/Sun--Streamline-Flex.png"
                 width="110"
                 height="32"
                 alt="Tabler"
