--- a/links.html
+++ b/links.html
@@ -65,11 +65,12 @@ npm install @tabler/icons --save
         <a href="#">
           <!-- this is where the navbar logo can be changed -->
           <img
-            src="/docs/assets/images/75166322068__F1FED4CA-CD5F-4866-972D-170E67395B0E.JPEG" 
-            width="110"
-            height="32"
-            alt="Tabler"
-            class="navbar-brand-image"
+            src="http://www.w3.org/2000/svg"  
+            width="24"  
+            height="24"  
+            viewBox="0 0 24 24"  
+            fill="currentColor"  
+            class="icon icon-tabler icons-tabler-filled icon-tabler-sunset-2"
           />
         </a>
       </h1>
