--- a/links.html
+++ b/links.html
@@ -64,14 +64,13 @@ npm install @tabler/icons --save
       <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
         <a href="#">
           <!-- this is where the navbar logo can be changed -->
-          <img
-            src="http://www.w3.org/2000/svg"  
-            width="24"  
-            height="24"  
-            viewBox="0 0 24 24"  
-            fill="currentColor"  
-            class="icon icon-tabler icons-tabler-filled icon-tabler-sunset-2"
-          />
+              <img
+                src="/docs/assets/images/Sun--Streamline-Flex.png"
+                width="110"
+                height="32"
+                alt="Tabler"
+                class="navbar-brand-image"
+              />
         </a>
       </h1>
       
