--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)">
-          <span class="nav-link-icon" href="/tabler/links.html"
+          <span class="nav-link-icon" 
             ><!-- Download SVG icon from http://tabler.io/icons/icon/checkbox -->
             <svg
               xmlns="http://www.w3.org/2000/svg"
