--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
+<!-- i think this is just the logo    
     <div class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
       <a href="javascript:void(0)">
         <svg
@@ -53,6 +55,8 @@
         </svg>
       </a>
     </div>
+-->
+    
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="javascript:void(0)">
