--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)">
+        <a class="nav-link" href="/tabler/links.html">
           <span class="nav-link-icon" 
             ><!-- Download SVG icon from http://tabler.io/icons/icon/checkbox -->
             <svg
