--- a/index.html
+++ b/index.html
@@ -82,10 +82,16 @@
               stroke-linejoin="round"
               class="icon icon-tabler icons-tabler-outline icon-tabler-sunset-2"
             >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
-              <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
-              <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M3 13h1" />
+              <path d="M20 13h1" />
+              <path d="M5.6 6.6l.7 .7" />
+              <path d="M18.4 6.6l-.7 .7" />
+              <path d="M8 13a4 4 0 1 1 8 0" />
+              <path d="M3 17h18" />
+              <path d="M7 20h5" />
+              <path d="M16 20h1" />
+              <path d="M12 5v-1" />
             </svg>
           </span>
           <span class="nav-link-title"> Home </span>
