--- a/links.html
+++ b/links.html
@@ -202,11 +202,11 @@ npm install @tabler/icons --save
 
     
 
-<!-- this isnt working so like
-<!--  breadcrumbs     
-<ol class="breadcrumb">
+<!--  breadcrumb -->    
+ <div class="hr-text text-primary"></div>  
+    <ol class="breadcrumb">
   <li class="breadcrumb-item">
-    <a href="#">
+    <a href="https://www.noahmadethis.website/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="icon"
@@ -227,13 +227,17 @@ npm install @tabler/icons --save
     </a>
   </li>
   <li class="breadcrumb-item">
-    <a href="#">Library</a>
+    <a href="#">Tabler</a>
   </li>
   <li class="breadcrumb-item active">
-    <a href="#">Data</a>
+    <a href="#">Index</a>
   </li>
+  <li class="breadcrumb-item active">
+    <a href="#">Links</a>
+  </li>    
 </ol>
-<!--  end breadcrumbs -->
+<div class="hr-text text-primary"></div>    
+<!--  end breadcrumb -->
 
     
   </body>
