--- a/links.html
+++ b/links.html
@@ -203,7 +203,7 @@ npm install @tabler/icons --save
     
 
 <!--  breadcrumb -->    
- <div class="hr-text text-primary"></div>  
+ <div class="hr-text hr-text-end"></div>  
     <ol class="breadcrumb">
   <li class="breadcrumb-item">
     <a href="https://www.noahmadethis.website/">
@@ -227,13 +227,10 @@ npm install @tabler/icons --save
     </a>
   </li>
   <li class="breadcrumb-item">
-    <a href="#">Tabler</a>
+    <a href="https://www.noahmadethis.website/tabler/">Tabler</a>
   </li>
   <li class="breadcrumb-item active">
-    <a href="#">Index</a>
-  </li>
-  <li class="breadcrumb-item active">
-    <a href="#">Links</a>
+    <a href="https://www.noahmadethis.website/tabler/links/">Links</a>
   </li>    
 </ol>
 <div class="hr-text text-primary"></div>    
