--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
 
 <!--  breadcrumb -->    
- <div class="hr-text text-primary"></div>  
+ <div class="hr-text hr-text-end"></div>  
     <ol class="breadcrumb">
   <li class="breadcrumb-item">
     <a href="https://www.noahmadethis.website/">
@@ -257,10 +257,7 @@
     </a>
   </li>
   <li class="breadcrumb-item">
-    <a href="#">Tabler</a>
-  </li>
-  <li class="breadcrumb-item active">
-    <a href="#">Index</a>
+    <a href="https://www.noahmadethis.website/tabler/">Tabler</a>
   </li>
 </ol>
 <div class="hr-text text-primary"></div>    
