--- a/index.html
+++ b/index.html
@@ -80,18 +80,11 @@
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-sunset-2"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-sun"
             >
               <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-              <path d="M3 13h1" />
-              <path d="M20 13h1" />
-              <path d="M5.6 6.6l.7 .7" />
-              <path d="M18.4 6.6l-.7 .7" />
-              <path d="M8 13a4 4 0 1 1 8 0" />
-              <path d="M3 17h18" />
-              <path d="M7 20h5" />
-              <path d="M16 20h1" />
-              <path d="M12 5v-1" />
+              <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+              <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" />
             </svg>
           </span>
           <span class="nav-link-title"> Home </span>
