--- a/links.html
+++ b/links.html
@@ -67,7 +67,7 @@
     
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="javascript:void(0)">
+        <a class="nav-link" href="/tabler">
           <span class="nav-link-icon">
             <!-- Download SVG icon from http://tabler.io/icons/icon/home -->
             <svg
