--- a/links.html
+++ b/links.html
@@ -136,7 +136,7 @@
               <path d="M20 12v6a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h9"></path>
             </svg>
           </span>
-          <span class="nav-link-title"> Settings </span>
+          <span class="nav-link-title"> Daily Games </span>
         </a>
       </li>
     </ul>
