--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
-              class="icon"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M9 11l3 3l8 -8"></path>
-              <path d="M20 12v6a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h9"></path>
+              class="icon icon-tabler icons-tabler-outline icon-tabler-device-gamepad"
+              >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M2 6m0 2a2 2 0 0 1 2 -2h16a2 2 0 0 1 2 2v8a2 2 0 0 1 -2 2h-16a2 2 0 0 1 -2 -2z" />
+              <path d="M6 12h4m-2 -2v4" />
+              <path d="M15 11l0 .01" />
+              <path d="M18 13l0 .01" />
             </svg>
           </span>
           <span class="nav-link-title"> Daily Games </span>
