--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
     
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>You Are Home <3</title>
+    <title>This is me, noahmadethis</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/css/tabler.min.css" />
   
   </head>
@@ -66,7 +66,7 @@
 
     
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="/tabler">
           <span class="nav-link-icon">
             <!-- Download SVG icon from http://tabler.io/icons/icon/home -->
@@ -91,7 +91,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tabler/links.html">
+        <a class="nav-link active" href="/tabler/links.html">
           <span class="nav-link-icon" 
             ><!-- Download SVG icon from http://tabler.io/icons/icon/checkbox -->
             <svg
