--- a/links.html
+++ b/links.html
@@ -67,7 +67,7 @@
     
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/tabler">
+        <a class="nav-link" href="https://www.noahmadethis.website/tabler">
           <span class="nav-link-icon">
             <!-- Download SVG icon from http://tabler.io/icons/icon/home -->
             <svg
