--- a/links.html
+++ b/links.html
@@ -90,8 +90,9 @@
           <span class="nav-link-title"> Home </span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="/tabler/links.html">
+      
+      <li class="nav-item active">
+        <a class="nav-link" href="javascript:void(0)">
           <span class="nav-link-icon" 
             ><!-- Download SVG icon from http://tabler.io/icons/icon/checkbox -->
             <svg
