--- a/links.html
+++ b/links.html
@@ -156,17 +156,17 @@
             style="background-image: url(...)"
           ></span>
           <div class="d-none d-xl-block ps-2">
-            <div>Paweł Kuna</div>
-            <div class="mt-1 small text-secondary">UI Designer</div>
+            <div>noahmadethis</div>
+            <div class="mt-1 small text-secondary">website</div>
           </div>
         </a>
         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-          <a href="#" class="dropdown-item">Status</a>
-          <a href="./profile.html" class="dropdown-item">Profile</a>
-          <a href="#" class="dropdown-item">Feedback</a>
+          <a href="#" class="dropdown-item">This doesnt do anything</a>
+          <a href="./profile.html" class="dropdown-item">Neither does this</a>
+          <a href="#" class="dropdown-item">nope</a>
           <div class="dropdown-divider"></div>
-          <a href="./settings.html" class="dropdown-item">Settings</a>
-          <a href="./sign-in.html" class="dropdown-item">Logout</a>
+          <a href="./settings.html" class="dropdown-item">lmfao</a>
+          <a href="./sign-in.html" class="dropdown-item">This blocks your IP from accessing this website</a>
         </div>
       </div>
     </div>
