--- a/links.html
+++ b/links.html
@@ -287,6 +287,9 @@
     
 
 <!--  breadcrumb -->    
+    <div class="page-wrapper">
+      <div class="page-body">
+        <div class="container-xl">    
  <div class="hr-text hr-text-end"></div>  
     <ol class="breadcrumb">
   <li class="breadcrumb-item">
@@ -315,6 +318,7 @@
   </li>    
 </ol>
 <div class="hr-text text-primary"></div>    
+</div> </div> </div>           
 <!--  end breadcrumb -->
 
     
