--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
           </div>
         </div>
       </div>
-      <!-- BEGIN PROFILE DROPDOWN -->
-
-      
+      <!-- END PROFILE DROPDOWN -->
+    </div> 
+  </header>
+  <!-- END NAVBAR -->     
+    
       <!-- this is for the profile select on the right of the header  
     <div class="navbar-nav flex-row order-md-last ms-auto">
       <div class="nav-item dropdown">
