--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
               </svg>
             </a>
           </div>
+          <!-- BEGIN BELL --
           <div class="nav-item dropdown d-none d-md-flex me-3">
             <a href="#" class="nav-link px-0" data-bs-toggle="dropdown" tabindex="-1" aria-label="Show notifications">
-              <!-- Download SVG icon from http://tabler.io/icons/icon/bell -->
+              <!-- Download SVG icon from http://tabler.io/icons/icon/bell --
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-1">
                 <path d="M10 5a2 2 0 1 1 4 0a7 7 0 0 1 4 6v3a4 4 0 0 0 2 3h-16a4 4 0 0 0 2 -3v-3a7 7 0 0 1 4 -6"></path>
                 <path d="M9 17v1a3 3 0 0 0 6 0v-1"></path>
@@ -97,7 +98,7 @@
                       </div>
                       <div class="col-auto">
                         <a href="#" class="list-group-item-actions">
-                          <!-- Download SVG icon from http://tabler.io/icons/icon/star -->
+                          <!-- Download SVG icon from http://tabler.io/icons/icon/star --
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon text-muted icon-2">
                             <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"></path>
                           </svg>
@@ -114,7 +115,7 @@
                       </div>
                       <div class="col-auto">
                         <a href="#" class="list-group-item-actions show">
-                          <!-- Download SVG icon from http://tabler.io/icons/icon/star -->
+                          <!-- Download SVG icon from http://tabler.io/icons/icon/star --
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon text-yellow icon-2">
                             <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"></path>
                           </svg>
@@ -131,7 +132,7 @@
                       </div>
                       <div class="col-auto">
                         <a href="#" class="list-group-item-actions">
-                          <!-- Download SVG icon from http://tabler.io/icons/icon/star -->
+                          <!-- Download SVG icon from http://tabler.io/icons/icon/star --
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon text-muted icon-2">
                             <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"></path>
                           </svg>
@@ -148,7 +149,7 @@
                       </div>
                       <div class="col-auto">
                         <a href="#" class="list-group-item-actions">
-                          <!-- Download SVG icon from http://tabler.io/icons/icon/star -->
+                          <!-- Download SVG icon from http://tabler.io/icons/icon/star --
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon text-muted icon-2">
                             <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"></path>
                           </svg>
@@ -160,6 +161,7 @@
               </div>
             </div>
           </div>
+          END BELL -->
         </div>
         <div class="nav-item dropdown">
           <a href="#" class="nav-link d-flex lh-1 p-0 px-2" data-bs-toggle="dropdown" aria-label="Open user menu">
