--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                       <path d="M16 16l3.923 -.98" />
                     </svg>
                     </span>
-                    <span class="nav-link-title"> Daily Games </span> <!-- shows string next to icon -->
+                    <span class="nav-link-title"> PE Study </span> <!-- shows string next to icon -->
                   </a>
                 </li>
                 <!-- END PE STUDY BUTTON -->
