--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       <!-- BEGIN NAVBAR LOGO -->
       <div class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
         <a href=".">
-          <svg  
-            xmlns="http://www.w3.org/2000/svg"  
+          <svg  xmlns="http://www.w3.org/2000/svg"  
             width="24"  
             height="24"  
             viewBox="0 0 24 24"  
