--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
               </svg>
               Source code
             </a>
+            <!-- BEGIN SPONSER BUTTON
             <a href="https://github.com/sponsors/codecalm" class="btn btn-6" target="_blank" rel="noreferrer">
-              <!-- Download SVG icon from http://tabler.io/icons/icon/heart -->
+              <!-- Download SVG icon from http://tabler.io/icons/icon/heart --
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon text-pink icon-2">
                 <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
               </svg>
               Sponsor
             </a>
+            -->
           </div>
         </div>
         <div class="d-none d-md-flex">
