--- a/index.html
+++ b/index.html
@@ -9,17 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>You Are Home <3</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/css/tabler.min.css" />
-
-
-
-
-
-  
 </head>
   
 <body>
   <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js"></script>
-
   <!-- BEGIN NAVBAR -->
   <header class="navbar navbar-expand-md d-print-none">
     <div class="container-xl"> 
@@ -56,7 +49,7 @@
         </a>
       </div>
       <!-- BEGIN NAVBAR LOGO -->
-      <!-- BEGIN PROFILE DROPDOWN -->
+      <!-- BEGIN RIGHT SIDE TOP BUTTONS -->
       <div class="navbar-nav flex-row order-md-last">
         <div class="nav-item d-none d-md-flex me-3">
           <div class="btn-list">
@@ -187,6 +180,7 @@
           END BELL --
         </div>
         -->
+        <!-- BEGIN USER MENU -->
         <div class="nav-item dropdown">
           <a href="#" class="nav-link d-flex lh-1 p-0 px-2" data-bs-toggle="dropdown" aria-label="Open user menu">
             <span class="avatar avatar-sm" style="background-image: url(./static/avatars/000m.jpg)"></span>
@@ -196,16 +190,16 @@
             </div>
           </a>
           <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-            <a href="#" class="dropdown-item">Status</a>
-            <a href="./profile.html" class="dropdown-item">Profile</a>
+            <a href="#" class="dropdown-item">Profile</a>
+            <a href="./profile.html" class="dropdown-item">Games</a>
             <a href="#" class="dropdown-item">Feedback</a>
             <div class="dropdown-divider"></div>
-            <a href="./settings.html" class="dropdown-item">Settings</a>
             <a href="./sign-in.html" class="dropdown-item">Logout</a>
           </div>
         </div>
+        <!-- END USER MENU -->
       </div>
-      <!-- END PROFILE DROPDOWN -->
+      <!-- RIGHT SIDE TOP BUTTONS --> 
     </div> 
   </header>
   <!-- END NAVBAR -->     
