--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <!-- BEGIN USER MENU -->
         <div class="nav-item dropdown">
           <a href="#" class="nav-link d-flex lh-1 p-0 px-2" data-bs-toggle="dropdown" aria-label="Open user menu">
-            <span class="avatar avatar-sm" style="background-image: url(./static/avatars/000m.jpg)"></span>
+            <span class="avatar avatar-sm" style="background-image: url(/docs/assets/images/75166322068__F1FED4CA-CD5F-4866-972D-170E67395B0E.JPEG)"></span>
             <div class="d-none d-xl-block ps-2">
               <div>NOOOOOOAHHHHH</div>
               <div class="mt-1 small text-secondary">hiiiii</div>
