--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>You Are Home ‪♡ </title>
+  <title>You Are Home</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/css/tabler.min.css" />
 </head>
   
@@ -31,7 +31,7 @@
       <!-- END NAVBAR TOGGLER -->
       <!-- BEGIN NAVBAR LOGO -->
       <div class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
-        <a href=".">
+        <a href="https://www.noahmadethis.website/">
           <svg  xmlns="http://www.w3.org/2000/svg"  
             width="24"  
             height="24"  
@@ -250,7 +250,7 @@
               <ul class="navbar-nav">
                 <!-- BEGIN HOME BUTTON -->
                 <li class="nav-item active"> <!-- showing highlight bar under button to show currently on page -->
-                  <a class="nav-link" href="javascript:void(0)"> <!-- button doesnt take you anywhere when clicked -->
+                  <a class="nav-link" href="https://www.noahmadethis.website/tabler/"> <!-- button doesnt take you anywhere when clicked -->
                     <span class="nav-link-icon"
                     ><!-- Download SVG icon from http://tabler.io/icons/icon/home -->
                     <svg
@@ -302,7 +302,7 @@
                 <!-- END SOCIALS BUTTON -->      
                 <!-- BEGIN DAILY GAMES BUTTON -->            
                 <li class="nav-item"> <!-- not showing highlight bar under button -->
-                  <a class="nav-link" href="javascript:void(0)"> <!-- button takes you to shown link when clicked -->
+                  <a class="nav-link" href="/tabler/daily-games.html"> <!-- button takes you to shown link when clicked -->
                     <span class="nav-link-icon"
                     ><!-- Download SVG icon from http://tabler.io/icons/icon/device-gamepad -->
                     <svg  xmlns="http://www.w3.org/2000/svg"
@@ -330,7 +330,7 @@
                 <!-- END DAILY GAMES BUTTON -->      
                 <!-- BEGIN PE STUDY BUTTON -->     
                 <li class="nav-item"> <!-- not showing highlight bar under button -->
-                  <a class="nav-link" href="javascript:void(0)"> <!-- button takes you to shown link when clicked -->
+                  <a class="nav-link" href="/tabler/PE-study.html"> <!-- button takes you to shown link when clicked -->
                     <span class="nav-link-icon"
                     ><!-- Download SVG icon from http://tabler.io/icons/icon/device-gamepad -->
                     <svg  xmlns="http://www.w3.org/2000/svg"
