--- a/links.html
+++ b/links.html
@@ -217,7 +217,7 @@
               <!-- BEGIN NAVBAR MENU -->
               <ul class="navbar-nav">
                 <!-- BEGIN HOME BUTTON -->
-                <li class="nav-item active"> <!-- showing highlight bar under button to show currently on page -->
+                <li class="nav-item active"> <!-- not showing highlight bar under button -->
                   <a class="nav-link" href="https://www.noahmadethis.website/tabler/"> <!-- button doesnt take you anywhere when clicked -->
                     <span class="nav-link-icon"
                     ><!-- Download SVG icon from http://tabler.io/icons/icon/home -->
@@ -243,7 +243,7 @@
                 </li>
                 <!-- END HOME BUTTON -->      
                 <!-- BEGIN SOCIALS BUTTON -->      
-                <li class="nav-item"> <!-- not showing highlight bar under button -->
+                <li class="nav-item active"> <!-- showing highlight bar under button to show currently on page -->
                   <a class="nav-link" href="/tabler/links.html"> <!-- button takes you to shown link when clicked -->
                     <span class="nav-link-icon" 
                     ><!-- This icon doesnt have a webpage, but can be found by searching "user" from: http://tabler.io/icons/ -->
