--- a/links.html
+++ b/links.html
@@ -217,7 +217,7 @@
               <!-- BEGIN NAVBAR MENU -->
               <ul class="navbar-nav">
                 <!-- BEGIN HOME BUTTON -->
-                <li class="nav-item active"> <!-- not showing highlight bar under button -->
+                <li class="nav-item"> <!-- not showing highlight bar under button -->
                   <a class="nav-link" href="https://www.noahmadethis.website/tabler/"> <!-- button doesnt take you anywhere when clicked -->
                     <span class="nav-link-icon"
                     ><!-- Download SVG icon from http://tabler.io/icons/icon/home -->
