--- a/links.html
+++ b/links.html
@@ -340,7 +340,6 @@
     <div class="page-wrapper">
       <div class="page-body">
         <div class="container-xl">
-
           <!-- Cards with tabs component -->
           <div class="card-tabs">
             <!-- Cards navigation -->
@@ -467,7 +466,14 @@
                   <rect x="10" y="12" width="4" height="4" />
                 </svg>
               </a>
-            </li>  
+            </li>
+            <li class="breadcrumb-item active">
+              <a href="https://www.noahmadethis.website/inks.html">
+                Links
+              </a>
+            </li>
+
+            
           </ol>
           <div class="hr-text text-primary"></div>    
         </div>
