--- a/links.html
+++ b/links.html
@@ -357,50 +357,52 @@
                 <a href="#tab-top-4" class="nav-link" data-bs-toggle="tab">Tab 4</a>
               </li>
             </ul>
-          <div class="tab-content">
-            <!-- Content of card #1 -->
-            <div id="tab-top-1" class="card tab-pane active show">
-              <div class="card-body">
-                <div class="card-title">Content of tab #1</div>
-                <p class="text-secondary">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
-                  distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
-                </p>
-              </div>
-            </div>
-            <!-- Content of card #2 -->
-            <div id="tab-top-2" class="card tab-pane">
-              <div class="card-body">
-                <div class="card-title">Content of tab #2</div>
-                <p class="text-secondary">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
-                  distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
-                </p>
-              </div>
-            </div>
-            <!-- Content of card #3 -->
-            <div id="tab-top-3" class="card tab-pane">
-              <div class="card-body">
-                <div class="card-title">Content of tab #3</div>
-                <p class="text-secondary">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
-                  distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
-                </p>
-              </div>
-            </div>
-            <!-- Content of card #4 -->
-            <div id="tab-top-4" class="card tab-pane">
-              <div class="card-body">
-                <div class="card-title">Content of tab #4</div>
+            <div class="tab-content">
+              <!-- Content of card #1 -->
+              <div id="tab-top-1" class="card tab-pane active show">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #1</div>
                   <p class="text-secondary">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
                     distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
                   </p>
                 </div>
               </div>
+              <!-- Content of card #2 -->
+              <div id="tab-top-2" class="card tab-pane">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #2</div>
+                  <p class="text-secondary">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
+                    distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
+                  </p>
+                </div>
+              </div>
+              <!-- Content of card #3 -->
+              <div id="tab-top-3" class="card tab-pane">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #3</div>
+                  <p class="text-secondary">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
+                    distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
+                  </p>
+                </div>
+              </div>
+              <!-- Content of card #4 -->
+              <div id="tab-top-4" class="card tab-pane">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #4</div>
+                    <p class="text-secondary">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
+                      distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
+                    </p>
+                </div>
+              </div>
             </div>
           </div>
-          <!-- END CARD WITH TAB COMPONENTS -->      
+          <!-- END CARD WITH TAB COMPONENTS -->
+        </div>
+        <div class="container-xl">
           <!-- BEGIN CARDS -->          
           <div class="row row-deck row-cards">
             <div class="card">
