--- a/links.html
+++ b/links.html
@@ -370,6 +370,7 @@
               </div>
               <div class="card-body">
                 <p class="text-secondary"><a href="https://boxd.it/6NFHD" class="pe-auto">Letterboxd</a></p>
+                <p class="text-secondary"><a href="https://www.goodreads.com/user/show/140799212-no" class="pe-auto">Goodreads</a></p>                
               </div>
             </div>
           </div>
