--- a/PE-study.html
+++ b/PE-study.html
@@ -344,10 +344,10 @@
           <div class="row row-deck row-cards">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">The 'dles</h3>
+                <h3 class="card-title">Past Results</h3>
               </div>
               <div class="card-body">
-                <p class="text-secondary"><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a></p>
+                <p class="text-secondary">FE Civil Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1372808-f157f54" class="pe-auto">Pass / 31 Mar 2021 / Oregon Board</a></p>
               </div>
             </div>
   
